RESOLVED FIXED310851
Fix `isAnyOf()` for non-const `CheckedPtr&` to call `isAnyOf` instead of `is`
https://bugs.webkit.org/show_bug.cgi?id=310851
Summary Fix `isAnyOf()` for non-const `CheckedPtr&` to call `isAnyOf` instead of `is`
Chris Dumez
Reported 2026-03-26 18:17:25 PDT
Fix `isAnyOf()` for non-const `CheckedPtr&` to call `isAnyOf` instead of `is`.
Attachments
Chris Dumez
Comment 1 2026-03-26 18:20:21 PDT
EWS
Comment 2 2026-03-27 01:10:21 PDT
Committed 310058@main (635d7979f0f1): <https://commits.webkit.org/310058@main> Reviewed commits have been landed. Closing PR #61456 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-27 01:11:13 PDT
Note You need to log in before you can comment on or make changes to this bug.