Fix `isAnyOf()` for non-const `CheckedPtr&` to call `isAnyOf` instead of `is` https://bugs.webkit.org/show_bug.cgi?id=310851

Reviewed by Ryosuke Niwa.

The non-const `isAnyOf(CheckedPtr<>&)` overload incorrectly delegated to
`is<ExpectedTypes...>()` instead of `isAnyOf<ExpectedTypes...>()`. Since
`is<>()` takes a *single* ExpectedType parameter, calling it with multiple
types either silently gave wrong results (2 types) or failed to compile
(3+ types). The const overload was already correct.

Test: Tools/TestWebKitAPI/Tests/WTF/CheckedPtr.cpp

* Source/WTF/wtf/CheckedPtr.h:
(WTF::isAnyOf):
* Tools/TestWebKitAPI/Tests/WTF/CheckedPtr.cpp:
(TestWebKitAPI::CheckedBaseForIsAnyOf::isDerivedCheckedA const):
(TestWebKitAPI::CheckedBaseForIsAnyOf::isDerivedCheckedB const):
(isType):
(TestWebKitAPI::TEST(WTF_CheckedPtr, IsAnyOfNonConst)):

Canonical link: https://commits.webkit.org/310058@main